--- a/tracergui/ui/code.ui
+++ b/tracergui/ui/code.ui
@@ -6,7 +6,7 @@
             <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>400</width>
+                <width>529</width>
                 <height>300</height>
             </rect>
         </property>
@@ -27,6 +27,20 @@
                         <widget class="QToolButton" name="btn_load_file">
                             <property name="text">
                                 <string>Load from file</string>
+                            </property>
+                        </widget>
+                    </item>
+                    <item>
+                        <widget class="QToolButton" name="saveButton">
+                            <property name="text">
+                                <string>Save to file</string>
+                            </property>
+                        </widget>
+                    </item>
+                    <item>
+                        <widget class="QToolButton" name="saveAsBtn">
+                            <property name="text">
+                                <string>Save to file as ...</string>
                             </property>
                         </widget>
                     </item>
